# QtMessenger

./: CMakeLists.txt  CMakeLists.txt.user.2fe263c  client.cpp  client.h  loaderthread.cpp  loaderthread.h  main.cpp  serverinterface.cpp  serverinterface.h
chat/: channel.cpp  channel.h  contact.cpp  contact.h  group.cpp  group.h  user.cpp  user.h
forms/: authenticationform.cpp  authenticationform.h  authenticationform.ui  chatform.cpp  chatform.h  chatform.ui  chatform.ui.autosave  form.cpp  form.h
